--- a/app/index.html
+++ b/app/index.html
@@ -6,15 +6,18 @@
   <meta name="description" content="">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-  <title>Angular Material - Starter App</title>
+  <title>Big Harvest: Ang 1.5</title>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
+  <link rel="stylesheet" href="./jspm_packages/github/angular/bower-material@master/angular-material.css"/>
   <link rel="stylesheet" href="./assets/app.css"/>
 </head>
 
-<body ng-cloak>
-  <!--
-      No content yet!
-  -->
+<body layout="column" ng-cloak>
+  <header subtitle="subtitle"></header>
+  <md-content>
+    <div layout='row' ng-view class="">
+    </div>
+  </md-content>
 <script src="./jspm_packages/system.js" type="text/javascript"></script>
 <script src="config.js" type="text/javascript"></script>
 <script type="text/javascript">
