--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,15 @@
 </head>
 
 <body layout="column" ng-controller="RootController as root" ng-cloak>
-  <header subtitle="subtitle"></header>{{root.zonesSelected}}
-  <hardiness zonesSelected='root.zonesSelected'></hardiness>
+  <header subtitle="subtitle"></header>
+  {{root.zonesSelected}}
+<!--  <hardiness selected="root.zonesSelected"></hardiness> -->
+
   <md-content flex layout='column'>
     <div  ng-view class="">
     </div>
   </md-content>
+
 <script src="./jspm_packages/system.js" type="text/javascript"></script>
 <script src="config.js" type="text/javascript"></script>
 <script type="text/javascript">
