--- a/app/sharedComponents/userList/UserList.html
+++ b/app/sharedComponents/userList/UserList.html
@@ -1,3 +1,3 @@
 <md-toolbar layout="row" md-scroll-shrink ng-if="true" class="md-toolbar-tools" md-whiteframe="4">
-  A Big Harvest {{subtitle}}
+  A Big Harvest - {{subtitle = "Home"}}
 </md-toolbar>
