Organized Folders and Logic, began nav logic

--- a/app/home/Garden/HardinessZones/HardinessZones.html
+++ b/app/home/Garden/HardinessZones/HardinessZones.html
@@ -28,7 +28,8 @@
           </md-checkbox>
         </div>
       </div>
-      <md-button ng-disabled="$ctrl.noneSelected($ctrl.selected)" ng-click="showUserList=true" ng-href="#!/pickPlants" class="md-raised md-accent">Pick Plants
+      <!--TODO: Hard Coded section and subsection must be filled by logic-->
+      <md-button ng-disabled="$ctrl.noneSelected($ctrl.selected)" ng-click="$ctrl.headerLocation({section:'Garden',subsection:'Pick Plants'})" ng-href="#!/pickPlants" class="md-raised md-accent">Pick Plants
       </md-button>
     </fieldset>
     </h3>
