--- a/app/home/Home/Home.html
+++ b/app/home/Home/Home.html
@@ -1,3 +1,4 @@
+<div layout="column">
   <div layout="row">
     <div flex-gt-xs="60" class="" layout-padding>
       <h1>
@@ -34,13 +35,11 @@
             {{location.content}}
           </p>
           <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-href="{{location.url}}" ng-click="" ng-disabled="{{location.disabled}}" class="md-raised md-accent">Let's Go!
+            <md-button ng-href="{{location.url}}" ng-click='$ctrl.headerLocation({section:location.section,subsection:location.subSection})' ng-disabled="{{location.disabled}}" class="md-raised md-accent">Let's Go!
             </md-button>
           </md-card-actions>
         </md-card-content>
-
       </md-card>
     </div>
-
-
   </div>
+</div>
