--- a/app/index.html
+++ b/app/index.html
@@ -12,29 +12,33 @@
   <link rel="stylesheet" href="./assets/app.css"/>
 </head>
 
-<body flex="100" layout="column" ng-controller="RootController as root" ng-cloak>
+<body flex layout="row" ng-controller="RootController as root" ng-cloak>
+  <div flex layout="column">
+    <header viewshown="root.devShown" section="root.curSection" subsection="root.curSubSection" lockul="root.showUserList"></header>
+    <!--Development View: turn off ng-if to deactivate-->
 
-  <header viewshown="root.devShown" subtitle="root.page" lockul="root.showUserList"></header>
-
-  <!--Development View: turn off ng-if to deactivate-->
-
-  <fieldset layout="row" ng-if="root.devShown">
-    <legend class="">Dev View</legend>
-    <h4>root.page :  {{root.page}} </h4>
-    <h4>root.devShown :  {{root.devShown}} </h4>
-    <h4>root.userPlants : <span ng-repeat="plant in root.userPlants track by $index"> {{plant.name}}, </span> </h4>
-  </fieldset>
-  <div class="" flex layout="row">
-    <md-content flex>
-      <div  ng-view class="">
+    <fieldset layout="row" ng-if="root.devShown">
+      <legend class="">Dev View</legend>
+      <h4>root.curSection :  {{root.curSection}} </h4>
+      <h4>root.curSubSection :  {{root.curSubSection}} </h4>
+      <h4>root.showUserList :  {{root.showUserList}} </h4>
+      <h4>root.userPlants : <span ng-repeat="plant in root.userPlants track by $index"> {{plant.name}}, </span> </h4>
+    </fieldset>
+    <md-content flex layout="row">
+      <div ng-view class="" >
       </div>
     </md-content>
-    <md-sidenav class="md-sidenav-right" md-is-locked-open="root.showUserList" md-component-id="right"
-                ng-click="" class="md-whiteframe-4dp">
-      <userlist plants=root.userPlants></userlist>
-    </md-sidenav>
   </div>
 
+  <md-sidenav class="md-sidenav-right" md-is-locked-open="root.showUserList" md-component-id="userplants" class="md-whiteframe-4dp">
+    <md-toolbar class="md-toolbar-tools" md-whiteframe="4">
+      <h3>UserList</h3>
+    </md-toolbar>
+    <md-content>
+      <userlist plants=root.userPlants></userlist>
+    </md-content>
+
+  </md-sidenav>
 
 <script src="./jspm_packages/system.js" type="text/javascript"></script>
 <script src="config.js" type="text/javascript"></script>
