refined nav logic and userlist logic

--- a/app/home/Garden/HardinessZones/HardinessZones.html
+++ b/app/home/Garden/HardinessZones/HardinessZones.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <!--TODO: Hard Coded section and subsection must be filled by logic-->
-      <md-button ng-disabled="$ctrl.noneSelected($ctrl.selected)" ng-click="$ctrl.headerLocation({section:'Garden',subsection:'Pick Plants'})" ng-href="#!/pickPlants" class="md-raised md-accent">Pick Plants
+      <md-button ng-disabled="$ctrl.noneSelected($ctrl.selected)" ng-click="" ng-href="#!/Garden/pickPlants" class="md-raised md-accent">Pick Plants
       </md-button>
     </fieldset>
     </h3>
